Fixed scrollable issue on IE 7 and updated test page

--- a/sass/browserhacks-ie.scss
+++ b/sass/browserhacks-ie.scss
@@ -138,3 +138,7 @@ section > div {
 .footer-test {
 	padding: 1%;
 }
+
+* + html body {
+	overflow: visible;
+}
